Trivial code works

--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,33 @@
+
+
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp" ng-controller="myCtrl">
 
   <head>
-    <title>NodeJS Starter Application</title>
+    <title>SaaS Accounting</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="stylesheets/style.css">
-  </head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-  <body>
-    <table>
-      <tr>
-        <td style= "width:30%;">
-          <img class = "newappIcon" src="images/newapp-icon.png">
-        <td>
-            <h1>Hi there!</h1>
-          <p>Thanks for creating a
-            <span class = "blue">NodeJS Starter Application</span>.
-            To get started see the Start Coding guide under your app in your dashboard.
-    </table>
-  </body>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    
+    <!--  Use the Angular library  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.js"></script>
+    
+	<script>
+	/*eslint-env browser */
+	var myApp = angular.module("myApp", []);
+	var scope;
 
+	myApp.controller("myCtrl", function($scope, $http) {
+  		scope = $scope;
+	});
+	
+	</script>
+	
+	<body>
+  		<h2>Test</h2>
+  	</body>
 </html>
